# jara

./: README.md  alert.html  index.html  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/vision/: device.rs  mod.rs  model.rs  track.rs
