[package]
name = "jara"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
candle-core = { git = "https://github.com/huggingface/candle", version = "0.9.1" }
candle-nn = { git = "https://github.com/huggingface/candle", version = "0.9.1" }
candle-datasets = { git = "https://github.com/huggingface/candle", version = "0.9.1" }
candle-transformers = { git = "https://github.com/huggingface/candle", version = "0.9.1" }
candle-onnx = { git = "https://github.com/huggingface/candle", version = "0.9.1" }
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
image = "0.25.6"
tracing = "0.1.41"
imageproc = "0.25.0"
ab_glyph = "0.2.31"
hf-hub = "0.4.3"
nokhwa = { version = "0.10.9", features = [
    "camera-sync-impl",
    "input-native",
    "output-threaded",
] }
intel-mkl-src = "0.8.1"

[features]
default = ["mkl"]
cuda = ["candle-core/cuda"]
mkl = ["candle-core/mkl"]
accelerate = ["candle-core/accelerate"]
